<resources>
    <string name="app_name">Practica3</string>
    <string name="cubo">Cubo</string>
    <string name="figura">Figura</string>
    <string name="esfera">Esfera</string>
    <string name="paralepipedo">Paralepipedo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lado">Lado</string>
    <string name="volumen">Volumen=</string>
    <string name="area">Area=</string>
    <string name="radio">Radio</string>
    <string name="Ancho">Ancho</string>
    <string name="Largo">Largo</string>
    <string name="Profundidad">Profundidad</string>
    <string name="calcular">Calcular</string>
    <string name="frase">Es necesario introducir un numero</string>
</resources>